--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
       </p>
       <p>
         This website is hosted on GitHub Pages!
-        <a href="https://abilmomin.github.io/robot-rentals/"
-          >https://abilmomin.github.io/robot-rentals/</a
-        >
+        <a href="https://abilmomin.github.io/robot-rentals/">https://abilmomin.github.io/robot-rentals/</a>
       </p>
     </footer>
 	<script src="scripts/script.js"></script>
